3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/log.txt
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:1:1: error: use of undeclared identifier 'std'
    1 | std::vector<float> JacobiDevONEAPI(const std::vector<float> a, const std::vector<float> b, float accuracy, sycl::device device) {
      | ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:1:42: error: use of undeclared identifier 'std'
    1 | std::vector<float> JacobiDevONEAPI(const std::vector<float> a, const std::vector<float> b, float accuracy, sycl::device device) {
      |                                          ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:1:70: error: use of undeclared identifier 'std'
    1 | std::vector<float> JacobiDevONEAPI(const std::vector<float> a, const std::vector<float> b, float accuracy, sycl::device device) {
      |                                                                      ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:1:108: error: use of undeclared identifier 'sycl'
    1 | std::vector<float> JacobiDevONEAPI(const std::vector<float> a, const std::vector<float> b, float accuracy, sycl::device device) {
      |                                                                                                            ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:2:17: error: use of undeclared identifier 'ITERATIONS'
    2 |   static_assert(ITERATIONS >= 1, "More than 1 iteration");
      |                 ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:3:9: error: unknown type name 'size_t'
    3 |   const size_t n = b.size();
      |         ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:6:3: error: use of undeclared identifier 'assert'
    6 |   assert(accuracy >= 0.0f);
      |   ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:7:3: error: use of undeclared identifier 'std'
    7 |   std::vector<float> res(n, 0.0f);
      |   ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:7:20: error: expected '(' for function-style cast or type construction
    7 |   std::vector<float> res(n, 0.0f);
      |               ~~~~~^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:8:3: error: use of undeclared identifier 'std'
    8 |   std::vector<float> res_prev(res);
      |   ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:8:20: error: expected '(' for function-style cast or type construction
    8 |   std::vector<float> res_prev(res);
      |               ~~~~~^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:8:31: error: use of undeclared identifier 'res'
    8 |   std::vector<float> res_prev(res);
      |                               ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:12:5: error: use of undeclared identifier 'sycl'
   12 |     sycl::queue dev_queue(device);
      |     ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:13:20: error: use of undeclared identifier 'sycl'
   13 |     float* a_dev = sycl::malloc_device<float>(n * n, dev_queue);
      |                    ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:13:45: error: expected '(' for function-style cast or type construction
   13 |     float* a_dev = sycl::malloc_device<float>(n * n, dev_queue);
      |                                        ~~~~~^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:13:54: error: use of undeclared identifier 'dev_queue'
   13 |     float* a_dev = sycl::malloc_device<float>(n * n, dev_queue);
      |                                                      ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:14:20: error: use of undeclared identifier 'sycl'
   14 |     float* b_dev = sycl::malloc_device<float>(n, dev_queue);
      |                    ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:14:45: error: expected '(' for function-style cast or type construction
   14 |     float* b_dev = sycl::malloc_device<float>(n, dev_queue);
      |                                        ~~~~~^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/4_jacobi_dev_oneapi/kanakov_roman/jacobi_dev_oneapi.cpp:14:50: error: use of undeclared identifier 'dev_queue'
   14 |     float* b_dev = sycl::malloc_device<float>(n, dev_queue);
      |                                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
